#cm: Setting surefire JMX to 4g.